Add initial question generation logic

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import SimpleArithmeticApp from "../apps/SimpleArithmetic/app.svelte";
 ---
 
 <Layout title="Math Trainer Demo">
-  <div>Hello World</div>
+  <SimpleArithmeticApp client:load data={{}} />
 </Layout>
