Add deploy config

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import exercises from "../data/exercises.json";
   <h1>Home Page</h1>
   {exercises.map((exercise) => (
     <div>
-      <a href={`/exercises/${exercise.id}`}>
+      <a href={`./exercises/${exercise.id}`}>
         <h2>{exercise.title}</h2>
       </a>
     </div>
