--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,8 @@ const { title } = Astro.props as Props;
 
         --color-text: hsl(12, 5%, 4%);
         --color-border: hsl(17, 24%, 90%);
+        --theme: #01a9f4;
+        --theme-dark: #0278ad;
       }
 
       html {
