--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -4,7 +4,8 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    width: 30rem;
+    max-width: 31rem;
+    width: 100%;
 }
 
 .time-buttons {
