--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,11 @@ import exercises from "../data/exercises.json";
 ---
 
 <Layout title="Math Trainer Demo">
-  <h1>Home Page</h1>
+  <h2>Mr.Bovell - Math Trainer Demo</h2>
   {exercises.map((exercise) => (
     <div>
       <a href={`./exercises/${exercise.id}`}>
-        <h2>{exercise.title}</h2>
+        <h3>{exercise.title}</h3>
       </a>
     </div>
   ))}
