Add custom exercise builder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,11 +5,19 @@ import exercises from "../data/exercises.json";
 
 <Layout title="Math Trainer Demo">
   <h2>Mr.Bovell - Math Trainer Demo</h2>
-  {exercises.map((exercise) => (
-    <div>
-      <a href={`./exercises/${exercise.id}`}>
-        <h3>{exercise.title}</h3>
-      </a>
-    </div>
-  ))}
+  <h3>Exercises:</h3>
+  <ul>
+    {exercises.map((exercise) => (
+      <li>
+        <a href={`./exercises/${exercise.id}`}>{exercise.title}</a>
+      </li>
+    ))}
+  </ul>
+  <br />
+  <h3>More:</h3>
+  <ul>
+    <li>
+      <a href="./build"> Combine Multiple Exercises</a>
+    </li>
+  </ul>
 </Layout>
