Add fix for builder link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import exercises from "../data/exercises.json";
   <h3>More:</h3>
   <ul>
     <li>
-      <a href="./build"> Combine Multiple Exercises</a>
+      <a href="./build/"> Combine Multiple Exercises</a>
     </li>
   </ul>
 </Layout>
