Update builder text

--- a/src/pages/build.astro
+++ b/src/pages/build.astro
@@ -5,6 +5,6 @@ import exercises from "../data/exercises.json";
 ---
 
 <Layout title="Build Custom Exercise">
-  <h2>Combine Multiple Exercises</h2>
+  <h2>What do you want to practice?</h2>
   <Builder client:load exercises={exercises} />
 </Layout>
