--- a/src/pages/exercises/[id].astro
+++ b/src/pages/exercises/[id].astro
@@ -15,6 +15,9 @@ export function getStaticPaths() {
     { params: { id: "divide-by-11-12" } },
     { params: { id: "multiply-from-13-15" } },
     { params: { id: "divide-from-13-15" } },
+    { params: { id: "common-fractions-to-percentages" } },
+    { params: { id: "squares-up-to-16" } },
+    { params: { id: "roots-up-to-16" } },
   ];
 }
 
