--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -20,10 +20,29 @@
     font-size: 2.6rem;
     text-align: center;
     margin-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .app-display-operation {
     color: var(--theme);
+}
+
+.app-numpad {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 20rem;
+    margin-top: 5rem;
+    gap: 0.2rem;
+}
+
+@media only screen and (min-width: 900px) {
+    .app-numpad {
+        display: none;
+    }
 }
 
 .fraction-line {
