Add backspace to numpad

--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -33,8 +33,8 @@
 .app-numpad {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    width: 20rem;
+    justify-content: left;
+    width: 18.4rem;
     margin-top: 5rem;
     gap: 0.2rem;
 }
