Add back buttont to exercises

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import exercises from "../data/exercises.json";
 <Layout title="Build Custom Exercise">
   <div class="home">
     <div class="home-title">Mr.Bovell's Math Trainer</div>
-    <p>Select the exercises you'd like to practice:</p>
+    <p>Select the exercises you would like to practice:</p>
     <div class="home-break"></div>
     <Builder client:load exercises={exercises} />
   </div>
