--- a/src/pages/exercises/custom.astro
+++ b/src/pages/exercises/custom.astro
@@ -7,6 +7,7 @@ import exercises from "../../data/exercises.json";
 <Layout title={"Custom Exercise"}>
   <div class="exercise-page">
     <CustomExercise client:load exercises={exercises} />
+    <a class="exercise-page-back" href="/mathtrainer/">← Back To Home Page</a>
   </div>
 </Layout>
 
@@ -18,5 +19,11 @@ import exercises from "../../data/exercises.json";
     align-items: center;
     height: 100vh;
     overflow: hidden;
+  }
+
+  .exercise-page-back {
+    color: var(--theme);
+    text-decoration: none;
+    margin-bottom: 4.5rem;
   }
 </style>
