--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -1,8 +1,6 @@
 .simple-arithmetic-app {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 90vh;
     max-width: 31rem;
     width: 100%;
@@ -16,14 +14,24 @@
 }
 
 .app-display {
+    margin-top:15rem;
     height: 20vh;
     font-size: 2.6rem;
     text-align: center;
-    margin-bottom: 4rem;
+    margin-bottom: 4.7rem;
     display: flex;
+    flex-direction: column;
+}
+
+.app-display-question-container {
+    text-align: center;
+    display:flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+}
+
+.app-display-question {
+    margin-bottom: 0.5rem;
 }
 
 .app-display-operation {
