Update numpad to be centered

--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -4,6 +4,8 @@
     height: 90vh;
     max-width: 31rem;
     width: 100%;
+    align-items: center;
+    margin-bottom: 3rem;
 }
 
 .time-buttons {
