--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -1,7 +1,8 @@
 .simple-arithmetic-app {
     display: flex;
     flex-direction: column;
-    height: 90vh;
+    height: 80vh;
+    justify-content: center;
     max-width: 31rem;
     width: 100%;
     align-items: center;
@@ -16,7 +17,7 @@
 }
 
 .app-display {
-    margin-top:15rem;
+    margin-top: 5rem;
     height: 20vh;
     font-size: 2.6rem;
     text-align: center;
@@ -45,7 +46,7 @@
     flex-wrap: wrap;
     justify-content: left;
     width: 18.4rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
     gap: 0.2rem;
 }
 
