Update base path for DROC setup

--- a/src/pages/exercises/custom.astro
+++ b/src/pages/exercises/custom.astro
@@ -7,7 +7,7 @@ import exercises from "../../data/exercises.json";
 <Layout title={"Custom Exercise"}>
   <div class="exercise-page">
     <CustomExercise client:load exercises={exercises} />
-    <a class="exercise-page-back" href="/mathtrainer/">← Back To Home Page</a>
+    <a class="exercise-page-back" href="/">← Back To Home Page</a>
   </div>
 </Layout>
 
