--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -1,92 +1,92 @@
 .simple-arithmetic-app {
-    display: flex;
-    flex-direction: column;
-    height: 80vh;
-    justify-content: center;
-    max-width: 31rem;
-    width: 100%;
-    align-items: center;
-    margin-bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  height: 80vh;
+  justify-content: center;
+  max-width: 31rem;
+  width: 100%;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 
 .time-buttons {
-    display:flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
 
-    .theme-button {
-        min-width: 9rem;
-    }
+  .theme-button {
+    min-width: 9rem;
+  }
 }
 
 #life-button {
-    .theme-button {
-        background-color: #f40136 !important;
-    }
+  .theme-button {
+    background-color: #f40136 !important;
+  }
 }
 
 .app-display {
-    margin-top: 5rem;
-    height: 20vh;
-    font-size: 2.6rem;
-    text-align: center;
-    margin-bottom: 4.7rem;
-    display: flex;
-    flex-direction: column;
+  margin-top: 5rem;
+  height: 20vh;
+  font-size: 2.6rem;
+  text-align: center;
+  margin-bottom: 4.7rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .app-display-question-container {
-    text-align: center;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .app-display-question {
-    margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .app-display-operation {
-    color: var(--theme);
+  color: var(--theme);
 }
 
 .app-numpad {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
-    width: 18.4rem;
-    margin-top: 1rem;
-    gap: 0.2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  width: 18.4rem;
+  margin-top: 1rem;
+  gap: 0.2rem;
 }
 
 @media only screen and (min-width: 900px) {
-    .app-numpad {
-        display: none;
-    }
+  .app-numpad {
+    display: none;
+  }
 }
 
 .fraction-line {
-    background-color: var(--theme);
-    width: 2rem;
-    height: 0.25rem;   
-    margin: 0.5rem;
+  background-color: var(--theme);
+  width: 2rem;
+  height: 0.25rem;
+  margin: 0.5rem;
 }
 
 .exponent {
-    margin-bottom: 1rem;
-    margin-left: 0.25rem
+  margin-bottom: 1rem;
+  margin-left: 0.25rem;
 }
 
 .app-stats {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin-bottom: 1rem;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 1rem;
 }
 
 .app-stat {
-    display: flex;
-    align-items: center;
-    gap: 0.3rem;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
 }
