--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,6 +37,8 @@ const { title } = Astro.props as Props;
 
       body {
         margin: 0;
+        max-height: 100vh;
+        overflow: hidden;
       }
 
       :global(h1) {
