Add percentage questions

--- a/src/apps/SimpleArithmetic/styles.scss
+++ b/src/apps/SimpleArithmetic/styles.scss
@@ -22,11 +22,11 @@
 
 #life-button {
   .theme-button {
-    background-color: #0068ab !important;
+    background-color: #f41d01 !important;
   }
 
   .theme-button:hover {
-    background-color: #003c68 !important;
+    background-color: #ab1400 !important;
   }
 }
 
