--- a/src/pages/exercises/[id].astro
+++ b/src/pages/exercises/[id].astro
@@ -14,6 +14,8 @@ export function getStaticPaths() {
     { params: { id: "multiply-by-11-12" } },
     { params: { id: "divide-by-11-12" } },
     { params: { id: "common-fractions-to-percentages" } },
+    { params: { id: "percentages-of-whole-numbers-below-100" } },
+    { params: { id: "percentages-of-whole-numbers-over-100" } },
     { params: { id: "squares-up-to-16" } },
     { params: { id: "roots-up-to-16" } },
   ];
