Add height back

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,8 +37,8 @@ const { title } = Astro.props as Props;
 
       body {
         margin: 0;
-        max-height: 100vh;
-        overflow: hidden;
+        /* min-height: 100vh;
+        overflow: hidden; */
       }
 
       :global(h1) {
